--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css" />
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/bower_components/jplist/dist/css/jplist.core.min.css" />
+  <link href="/bower_components/jplist/dist/css/jplist.jquery-ui-bundle.min.css" rel="stylesheet" type="text/css" />
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -80,8 +81,15 @@
     <script src="/bower_components/jplist/dist/js/jplist.sort-bundle.min.js"></script>
     <script src="/bower_components/jplist/dist/js/jplist.pagination-bundle.min.js"></script>
     <script src="/bower_components/jplist/dist/js/jplist.textbox-filter.min.js"></script>
+    <script src="/bower_components/jplist/dist/js/jplist.jquery-ui-bundle.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
+
+    {# 
+    <script src="/bower_components/jplist/dist/js/jplist.sort-bundle.min.js"></script>
+    <script src="/bower_components/jplist/dist/js/jplist.pagination-bundle.min.js"></script>
+    <script src="/bower_components/jplist/dist/js/jplist.textbox-filter.min.js"></script>
+    <script src="/bower_components/jplist/dist/js/jplist.jquery-ui-bundle.min.js"></script> #}
 
     <script src="{{assetPath}}/js/app.js"></script>
 
