--- a/app/_templates/layout.twig
+++ b/app/_templates/layout.twig
@@ -79,6 +79,11 @@
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- endbuild -->
 
+    
+    <script src="/bower_components/jplist/dist/js/jplist.sort-bundle.min.js"></script>
+    <script src="/bower_components/jplist/dist/js/jplist.pagination-bundle.min.js"></script>
+    <script src="/bower_components/jplist/dist/js/jplist.textbox-filter.min.js"></script>
+    <script src="/bower_components/jplist/dist/js/jplist.jquery-ui-bundle.min.js"></script> 
     {# 
     <script src="/bower_components/jplist/dist/js/jplist.sort-bundle.min.js"></script>
     <script src="/bower_components/jplist/dist/js/jplist.pagination-bundle.min.js"></script>
