--- a/app/index.twig
+++ b/app/index.twig
@@ -534,13 +534,12 @@
 	</div>
 </section>
 
-<section class="project">
+<section class="project" data-module="SlideProject">
 	<div class="container">
 
 		<h2 class="section-title text-center">Featured Projects</h2>
-		<div class="row">
-			<div class="col-md-4">
-				<div class="item-project">
+		<div class="slider-wrapper">
+			<div class="item-project">
 					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
 					<div class="item-project__info">
 						<h3>Mastery An Phu</h3>
@@ -550,11 +549,9 @@
 							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
 							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
 						</div>
-					</div>
-				</div>
+					</div>				
 			</div>
-			<div class="col-md-4">
-				<div class="item-project">
+			<div class="item-project">
 					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
 					<div class="item-project__info">
 						<h3>Mastery An Phu</h3>
@@ -564,11 +561,9 @@
 							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
 							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
 						</div>
-					</div>
-				</div>
+					</div>				
 			</div>
-			<div class="col-md-4">
-				<div class="item-project">
+			<div class="item-project">
 					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
 					<div class="item-project__info">
 						<h3>Mastery An Phu</h3>
@@ -576,10 +571,21 @@
 						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
 						<div class="btn-wrapper">
 							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
-							<a class="btn btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
+							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
 						</div>
-					</div>
-				</div>
+					</div>				
+			</div>
+			<div class="item-project">
+					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
+					<div class="item-project__info">
+						<h3>Mastery An Phu</h3>
+						<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
+						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
+						<div class="btn-wrapper">
+							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
+							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
+						</div>
+					</div>				
 			</div>
 		</div>
 
