--- a/app/assets/css/pages/_home.scss
+++ b/app/assets/css/pages/_home.scss
@@ -449,9 +449,30 @@
 
 .item-project {
 	margin-bottom: 10px;
+	padding: 0 10px;
 	h3 {
 		font-size: $size-m;
 		margin-bottom: 5px;
+	}
+}
+
+.project {
+	.slick-arrow {
+		border-radius: 50%;
+		width: 50px;
+		height: 50px;
+		opacity: 0;
+	}
+	.slick-prev {
+		left: -5px;
+	}
+	.slick-next {
+		right: -5px;
+	}
+	&:hover {
+		.slick-arrow {
+			opacity: 1;
+		}
 	}
 }
 .item-project__img {
