--- a/app/project.twig
+++ b/app/project.twig
@@ -19,16 +19,15 @@
 	</div>
 </section>
 
-<section class="project__detail" data-module="ScrollTo">
+<section class="list-feature">
 	<div class="container">
-
 		<div class="breadcrumb">
 			<a href="#"><i class="fa fa-home"></i></a>  
 			<i class="fa fa-angle-right"></i> 
 			<a href="#">District 7</a> <i class="fa fa-angle-right"></i> Starhill
 		</div>
 
-		<ul class="tab-link">
+		<ul class="tab-link" data-module="ScrollTo">
 			<li class="active"><a href="javascript:void(0);" class="link-to" data-target="#description"> Description</a></li>
 			<li><a href="javascript:void(0);" class="link-to" data-target="#overview"> Overview</a></li>
 			<li><a href="javascript:void(0);" class="link-to" data-target="#facilities"> Facilities</a></li>
@@ -36,190 +35,6 @@
 			<li><a href="javascript:void(0);" class="link-to" data-target=".list-table"> Listing</a></li>
 		</ul>
 		<hr />
-
-		<h3 class="block-title" id="description">Description</h3>
-		<div class="row">
-			<div class="col-md-6">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, soluta iure, aliquid sint ab architecto sequi, facilis nobis voluptatem optio sapiente assumenda reiciendis facere quidem nostrum iusto hic sed eligendi.
-			</div>
-			<div class="col-md-6">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, soluta iure, aliquid sint ab architecto sequi, facilis nobis voluptatem optio sapiente assumenda reiciendis facere quidem nostrum iusto hic sed eligendi.
-			</div>
-		</div>
-		
-		<h3 class="block-title" id="overview">Overview</h3>
-		<ul class="thumb-service thumb--col-4">
-			<li>
-				<i class="fa fa-home"></i>
-				<div class="info-fa">
-					<p>
-						<b>Apartment</b><br />
-						Project Type
-					</p>
-				</div>
-			</li>
-			<li>
-				<i class="fa fa-truck"></i>
-				<div class="info-fa">
-					<p>
-						<b>Finished</b><br />
-						Project Status
-					</p>
-				</div>
-			</li>
-			<li>
-				<i class="fa fa-building"></i>
-				<div class="info-fa">
-					<p>
-						<b>4-18 Floors</b><br />
-						Floors
-					</p>
-				</div>
-			</li>
-			<li>
-				<i class="fa fa-bed"></i>
-				<div class="info-fa">
-					<p>
-						<b>2-3</b><br />
-						Bedrooms
-					</p>
-				</div>
-			</li>
-		
-			<li>
-				<i class="fa fa-home"></i>
-				<div class="info-fa">
-					<p>
-						<b>Apartment</b><br />
-						Project Type
-					</p>
-				</div>
-			</li>
-			<li>
-				<i class="fa fa-truck"></i>
-				<div class="info-fa">
-					<p>
-						<b>Finished</b><br />
-						Project Status
-					</p>
-				</div>
-			</li>
-			<li>
-				<i class="fa fa-building"></i>
-				<div class="info-fa">
-					<p>
-						<b>4-18 Floors</b><br />
-						Floors
-					</p>
-				</div>
-			</li>
-			<li>
-				<i class="fa fa-bed"></i>
-				<div class="info-fa">
-					<p>
-						<b>2-3</b><br />
-						Bedrooms
-					</p>
-				</div>
-			</li>
-		</ul>
-		
-		<h3 class="block-title" id="facilities">FACITLITIES</h3>
-
-		<ul class="thumb-service thumb--col-4">
-			<li><i class="flaticon-a-public6"></i><span>Community hall</span></li>
-			<li><i class="flaticon-a-badminton9"></i><span>badminton court</span></li>
-			<li><i class="flaticon-a-phonecall10"></i><span>Intercom</span></li>
-			<li><i class="flaticon-a-bicycle14"></i><span>Gymnasium</span></li>
-			<li><i class="flaticon-a-tea24"></i><span>Coffee shop</span></li>
-			<li><i class="flaticon-a-money385"></i><span>Access card</span></li>
-			<li><i class="flaticon-a-shopper1"></i><span>Shooping mall</span></li>
-			<li><i class="flaticon-a-yoga13"></i><span>Yoga &amp; meditation</span></li>
-			<li><i class="flaticon-a-customerservice14"></i><span>Maintance staff</span></li>
-			<li><i class="flaticon-a-shopping-cart8"></i><span>supper market</span></li>
-			<li><i class="flaticon-a-swimming21"></i><span>Swimming Pool</span></li>
-			<li><i class="flaticon-a-policeman1"></i><span>Security Guards</span></li>
-			<li><i class="flaticon-a-pool8"></i><span>Indoor game</span></li>
-			<li><i class="flaticon-a-medical12"></i><span>Phamacy</span></li>
-			<li><i class="flaticon-a-man244"></i><span>Banking /ATM</span></li>
-			<li><i class="flaticon-a-racket1"></i><span>tennis court</span></li>
-			<li><i class="flaticon-a-covered16"></i><span>Restaurant</span></li>            
-			<li><i class="flaticon-a-network11"></i><span>Club house</span></li>
-			<li><i class="flaticon-a-plug38"></i><span>24h Electricity Backup</span></li>
-			<li><i class="flaticon-a-parking19"></i><span>Parking</span></li>
-		</ul>
-
-	</div>
-</section>
-
-<section class="map-detail" data-module="MapDetail" data-lat ="10.785" data-lng ="106.701">
-	<div class="map-info">
-		<h3>Resort like Stone-Hill</h3>
-		<p><i class="fa fa-map-marker"></i> <span>District 7</span></p>
-	</div>
-	<div class="map-content" id="map">
-	</div>
-</section>
-
-<section class="list-table">
-	<div class="container">
-		<h2 class="section-title">All Listing in Starhills</h2>
-
-		<table id="myTable" data-module="TableSort" data-toggle="table"  data-sort-name="code" data-sort-order="asc">
-			<thead>
-				<tr>
-					<th data-field="code" data-sortable="true">House code</th>
-					<th data-field="numBed" data-sortable="true">Bedroom</th>
-					<th data-field="numBath" data-sortable="true">Bathroom</th>
-					<th data-field="area" data-sortable="true">Area</th>
-					<th data-field="floor" data-sortable="true">Floor</th>
-					<th data-field="furnished" data-sortable="true">Furnished</th>
-					<th data-field="view" data-sortable="true">View</th>
-					<th data-field="price" data-sortable="true">Price</th>
-					<th></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>AH02163</td>
-					<td>1 bed</td>
-					<td>1 bath</td>
-					<td>80sqm</td>
-					<td>6th</td>
-					<td>furnished</td>
-					<td>River</td>
-					<td>$1000</td>
-					<td><a href="#">View</a></td>
-				</tr>
-				<tr>
-					<td>BH02165</td>
-					<td>1 bed</td>
-					<td>1 bath</td>
-					<td>80sqm</td>
-					<td>6th</td>
-					<td>empty</td>
-					<td>River</td>
-					<td>$2000</td>
-					<td><a href="#">View</a></td>
-				</tr>
-				<tr>
-					<td>H02165</td>
-					<td>1 bed</td>
-					<td>1 bath</td>
-					<td>70sqm</td>
-					<td>6th</td>
-					<td>empty</td>
-					<td>River</td>
-					<td>$3000</td>
-					<td><a href="#">View</a></td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-</section>
-
-<section class="list-feature">
-	<div class="container">
 
 		<h2 class="section-title">Feature Listings in Standhills</h2>
 		<div class="row">
@@ -315,13 +130,196 @@
 	</div>
 </section>
 
-<section class="simmilar-project">
+<section class="project__detail">
+	<div class="container">
+
+		<h3 class="block-title" id="description">Description</h3>
+		<div class="row">
+			<div class="col-md-6">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, soluta iure, aliquid sint ab architecto sequi, facilis nobis voluptatem optio sapiente assumenda reiciendis facere quidem nostrum iusto hic sed eligendi.
+			</div>
+			<div class="col-md-6">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit, soluta iure, aliquid sint ab architecto sequi, facilis nobis voluptatem optio sapiente assumenda reiciendis facere quidem nostrum iusto hic sed eligendi.
+			</div>
+		</div>
+		
+		<h3 class="block-title" id="overview">Overview</h3>
+		<ul class="thumb-service thumb--col-4">
+			<li>
+				<i class="fa fa-home"></i>
+				<div class="info-fa">
+					<p>
+						<b>Apartment</b><br />
+						Project Type
+					</p>
+				</div>
+			</li>
+			<li>
+				<i class="fa fa-truck"></i>
+				<div class="info-fa">
+					<p>
+						<b>Finished</b><br />
+						Project Status
+					</p>
+				</div>
+			</li>
+			<li>
+				<i class="fa fa-building"></i>
+				<div class="info-fa">
+					<p>
+						<b>4-18 Floors</b><br />
+						Floors
+					</p>
+				</div>
+			</li>
+			<li>
+				<i class="fa fa-bed"></i>
+				<div class="info-fa">
+					<p>
+						<b>2-3</b><br />
+						Bedrooms
+					</p>
+				</div>
+			</li>
+
+			<li>
+				<i class="fa fa-home"></i>
+				<div class="info-fa">
+					<p>
+						<b>Apartment</b><br />
+						Project Type
+					</p>
+				</div>
+			</li>
+			<li>
+				<i class="fa fa-truck"></i>
+				<div class="info-fa">
+					<p>
+						<b>Finished</b><br />
+						Project Status
+					</p>
+				</div>
+			</li>
+			<li>
+				<i class="fa fa-building"></i>
+				<div class="info-fa">
+					<p>
+						<b>4-18 Floors</b><br />
+						Floors
+					</p>
+				</div>
+			</li>
+			<li>
+				<i class="fa fa-bed"></i>
+				<div class="info-fa">
+					<p>
+						<b>2-3</b><br />
+						Bedrooms
+					</p>
+				</div>
+			</li>
+		</ul>
+		
+		<h3 class="block-title" id="facilities">FACITLITIES</h3>
+
+		<ul class="thumb-service thumb--col-4">
+			<li><i class="flaticon-a-public6"></i><span>Community hall</span></li>
+			<li><i class="flaticon-a-badminton9"></i><span>badminton court</span></li>
+			<li><i class="flaticon-a-phonecall10"></i><span>Intercom</span></li>
+			<li><i class="flaticon-a-bicycle14"></i><span>Gymnasium</span></li>
+			<li><i class="flaticon-a-tea24"></i><span>Coffee shop</span></li>
+			<li><i class="flaticon-a-money385"></i><span>Access card</span></li>
+			<li><i class="flaticon-a-shopper1"></i><span>Shooping mall</span></li>
+			<li><i class="flaticon-a-yoga13"></i><span>Yoga &amp; meditation</span></li>
+			<li><i class="flaticon-a-customerservice14"></i><span>Maintance staff</span></li>
+			<li><i class="flaticon-a-shopping-cart8"></i><span>supper market</span></li>
+			<li><i class="flaticon-a-swimming21"></i><span>Swimming Pool</span></li>
+			<li><i class="flaticon-a-policeman1"></i><span>Security Guards</span></li>
+			<li><i class="flaticon-a-pool8"></i><span>Indoor game</span></li>
+			<li><i class="flaticon-a-medical12"></i><span>Phamacy</span></li>
+			<li><i class="flaticon-a-man244"></i><span>Banking /ATM</span></li>
+			<li><i class="flaticon-a-racket1"></i><span>tennis court</span></li>
+			<li><i class="flaticon-a-covered16"></i><span>Restaurant</span></li>            
+			<li><i class="flaticon-a-network11"></i><span>Club house</span></li>
+			<li><i class="flaticon-a-plug38"></i><span>24h Electricity Backup</span></li>
+			<li><i class="flaticon-a-parking19"></i><span>Parking</span></li>
+		</ul>
+
+	</div>
+</section>
+
+<section class="list-table">
+	<div class="container">
+		<h2 class="section-title">All Listing in Starhills</h2>
+
+		<table id="myTable" data-module="TableSort" data-toggle="table"  data-sort-name="code" data-sort-order="asc">
+			<thead>
+				<tr>
+					<th data-field="code" data-sortable="true">House code</th>
+					<th data-field="numBed" data-sortable="true">Bedroom</th>
+					<th data-field="numBath" data-sortable="true">Bathroom</th>
+					<th data-field="area" data-sortable="true">Area</th>
+					<th data-field="floor" data-sortable="true">Floor</th>
+					<th data-field="furnished" data-sortable="true">Furnished</th>
+					<th data-field="view" data-sortable="true">View</th>
+					<th data-field="price" data-sortable="true">Price</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>AH02163</td>
+					<td>1 bed</td>
+					<td>1 bath</td>
+					<td>80sqm</td>
+					<td>6th</td>
+					<td>furnished</td>
+					<td>River</td>
+					<td>$1000</td>
+					<td><a href="#">View</a></td>
+				</tr>
+				<tr>
+					<td>BH02165</td>
+					<td>1 bed</td>
+					<td>1 bath</td>
+					<td>80sqm</td>
+					<td>6th</td>
+					<td>empty</td>
+					<td>River</td>
+					<td>$2000</td>
+					<td><a href="#">View</a></td>
+				</tr>
+				<tr>
+					<td>H02165</td>
+					<td>1 bed</td>
+					<td>1 bath</td>
+					<td>70sqm</td>
+					<td>6th</td>
+					<td>empty</td>
+					<td>River</td>
+					<td>$3000</td>
+					<td><a href="#">View</a></td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+</section>
+
+<section class="map-detail" data-module="MapDetail" data-lat ="10.785" data-lng ="106.701">
+	<div class="map-info">
+		<h3>Resort like Stone-Hill</h3>
+		<p><i class="fa fa-map-marker"></i> <span>District 7</span></p>
+	</div>
+	<div class="map-content" id="map">
+	</div>
+</section>
+
+<section class="project" data-module="SlideProject">
 	<div class="container">
 
 		<h2 class="section-title">Similar Projects</h2>
-		<div class="row">
-			<div class="col-md-4">
-				<div class="item-project">
+		<div class="slider-wrapper">
+			<div class="item-project">
 					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
 					<div class="item-project__info">
 						<h3>Mastery An Phu</h3>
@@ -331,11 +329,9 @@
 							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
 							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
 						</div>
-					</div>
-				</div>
+					</div>				
 			</div>
-			<div class="col-md-4">
-				<div class="item-project">
+			<div class="item-project">
 					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
 					<div class="item-project__info">
 						<h3>Mastery An Phu</h3>
@@ -345,11 +341,9 @@
 							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
 							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
 						</div>
-					</div>
-				</div>
+					</div>				
 			</div>
-			<div class="col-md-4">
-				<div class="item-project">
+			<div class="item-project">
 					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
 					<div class="item-project__info">
 						<h3>Mastery An Phu</h3>
@@ -357,14 +351,29 @@
 						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
 						<div class="btn-wrapper">
 							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
-							<a class="btn btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
+							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
 						</div>
-					</div>
-				</div>
+					</div>				
+			</div>
+			<div class="item-project">
+					<figure class="item-project__img"><img src="assets/images/dummy/masteri-anphu.png"></figure>
+					<div class="item-project__info">
+						<h3>Mastery An Phu</h3>
+						<p class="info-detail">DISTRICT2 - 43Floor - 900 unit</p>
+						<p class="info-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ven</p>
+						<div class="btn-wrapper">
+							<a class="btn btn--small" href="#"><i class="fa fa-long-arrow-right"></i> Read more</a>
+							<a class="btn  btn--small" href="#"><i class="fa fa-building-o"></i> see list</a>
+						</div>
+					</div>				
 			</div>
 		</div>
 
+		<div class="btn-wrapper">
+			<a href="#" class="btn btn--blue">View all</a>
+		</div>
 	</div>
+	
 </section>
 
 
