--- a/app/assets/css/elements/_forms.scss
+++ b/app/assets/css/elements/_forms.scss
@@ -224,6 +224,7 @@ input {
   &.textarea-wrapper{
     height: 150px;
     overflow: hidden;
+    width: 100%;
 
     textarea {
       padding: 0 15px;
