--- a/app/project.twig
+++ b/app/project.twig
@@ -252,7 +252,7 @@
 	<div class="container">
 		<h2 class="section-title">All Listing in Starhills</h2>
 
-		<table id="myTable" data-module="TableSort" data-toggle="table"  data-sort-name="code" data-sort-order="asc">
+		<table id="myTable" data-toggle="table"  data-sort-name="code" data-sort-order="asc">
 			<thead>
 				<tr>
 					<th data-field="code" data-sortable="true">House code</th>
