--- a/app/assets/css/elements/_modal.scss
+++ b/app/assets/css/elements/_modal.scss
@@ -91,11 +91,15 @@
     margin: 0 auto;
     background: #fff;
     color: #333;
+    padding: 20px 40px;
   }
   .row {
     width: 100%;
   }
   .thumb-service {
     color: #333;
+  }
+  h2 {
+    font-size: 22px;
   }
 }
