--- a/app/listing.twig
+++ b/app/listing.twig
@@ -44,11 +44,13 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-body row">
-          <h2> Resort - like new Apartment in Starhill district 7</h2>
-          <div class="locate"><i class="fa fa-map-marker"></i> District 7</div>
-          <div class="house-code float-right">
-            h012345
-            <span>House Code</span>
+          <div class="block-title">
+            <div class="house-code">
+              h012345
+              <span>House Code</span>
+            </div>
+            <h2> Resort - like new Apartment in Starhill district 7</h2>
+            <p class="locate"><i class="fa fa-map-marker"></i> District 7</p>
           </div>
           <div class="row">
             <div class="col-5">
@@ -74,6 +76,9 @@
                 </div>
                 <div class="input-wrapper textarea-wrapper">
                   <textarea rows="4" placeholder="Hello, I'm interest in  Resort  Apartment in Starhill district 7. Please sent me the current available and additional detail.Thanks"></textarea>
+                </div>
+                <div class="btn-warpper">
+                  <button class="btn btn--red f-right">Request Inspectation</button>
                 </div>
               </form>
             </div> 
@@ -109,13 +114,13 @@
         <hr />
 
         <div class="list-content">
-          <div class="house-code float-right">
+          <div class="house-code">
             h012345
             <span>House Code</span>
           </div>
 
           <h2> Resort - like new Apartment in Starhill district 7</h2>
-          <div class="locate"><i class="fa fa-map-marker"></i> District 7</div>
+          <p class="locate"><i class="fa fa-map-marker"></i> District 7</p>
 
           <h3 class="block-title"> Overview</h3>
 
